Allow quotes in imported csv files and make mass import more resilient (#6012)
* allow quotes in imported csv and make mass import more resilient

* delegate csv line parsing to OpenCSV

* update openCSV

* Instantiate the CSV parser only once

* implemented suggested method

* re-introduce check for empty lines

* Updated Tests to accomodate for changes in CSV parsing in Mass Import

* Add tests for preparation of metadata with CSV values with comma

* reset file permissions of script_createDirMeta.sh

* Always reset header and csv-lines on file upload